2010-06-29  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#165009 Device not responding if Done button is tapped in layout mode

	Test case: enter edit mode, open the menu, and close it.
	If image-viewer was running (has been prestarted) and its
	animas were stacked high enough we didn't return to edit mode.

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_unmap_notify):
	  In EDIT_DLG state, when a dialog is closed don't consider
	  animas spoiling pointer grabs -- they can't.

2010-06-24  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/main.c (main):
	  Call hildon_gtk_init() rather than pure gtk_init() to get
	  correct localization of stock Yes/No strings.

2010-06-09  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#173240 Holding phone in portrait orientation doesn't launch
		  call-ui after unlock

	hd_app_mgr_check_show_callui() after unlock

	* src/launcher/hd-app-mgr.c:
	  * _HdAppMgrPrivate: remove @display_on,
	     use @hd_dbus_display_is_off instead
	  * _hd_app_mgr_should_show_callui: also check for @accel_enabled
	  * hd_app_mgr_check_show_callui: made public for hd-dbus.c
	  * hd_app_mgr_mce_activate_accel_if_needed: check @hd_dbus_tklock_on,
	    and disable the accelerometer if it's on
	* src/util/hd-dbus.c (hd_dbus_system_bus_signal_handler):
	  * hd_app_mgr_mce_activate_accel_if_needed() when tklock changes
	  * hd_app_mgr_check_show_callui() when display is on

2010-06-09  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#173242 portrait properties of upper windows ignored
		  when a stack of windows are mapped

	lp_forecast() guessed the right thing then set_visibilities()
	determined that the bottom of the stack is still visible
	(albeit soon to disappear) so it overrode the decision
	and forced landscape.

	* src/util/hd-transition.c (hd_transition_completed):
	  Rerun hd_comp_mgr_portrait_or_not_portrait() after the
	  last transition.

2010-06-02  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Release 2.2.139-2.
